metadata/force-app/main/default/objects/CustomName_ScFzk__c/CustomName_ScFzk__c.object-meta.xml
<CustomObject>
    <description>Description_WwxSB</description>
    <label>CustomLabel_coLLL</label>
    <nameField>
        <label>CustomLabel_coLLL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_coLLLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>