metadata/force-app/main/default/objects/CustomName_ScFzk__c/fields/CustomField_pdYCD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pdYCD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwwOvg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>