metadata/force-app/main/default/objects/CustomName_ScFzk__c/fields/CustomField_pMtXY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pMtXY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJAinU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>